--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="Strobe">
+  <meta name="apple-mobile-web-app-title" content="Psych-Light">
   <link rel="apple-touch-icon" href="/icon-192.png">
 
   <style>
